[gd_scene load_steps=17 format=3 uid="uid://bmbt5kjfdxknr"]

[ext_resource type="Script" uid="uid://bifdrahfhj7do" path="res://Script/player.gd" id="1_3c51y"]
[ext_resource type="PackedScene" uid="uid://06v2tskuo44s" path="res://Item/bullet1.tscn" id="2_2brrg"]
[ext_resource type="Texture2D" uid="uid://crrnl2277me4o" path="res://Sprite/split_0_0.png" id="4_8qfpo"]
[ext_resource type="Texture2D" uid="uid://c0vrdhfu3wypu" path="res://Sprite/S_kirakira1.png" id="4_cyipv"]
[ext_resource type="Texture2D" uid="uid://depces0sdimws" path="res://Sprite/split_1_0.png" id="4_ur0x2"]
[ext_resource type="Texture2D" uid="uid://baklurnarn6bh" path="res://Sprite/S_kirakira2.png" id="5_76vsb"]
[ext_resource type="Texture2D" uid="uid://wseebgg6ynmh" path="res://Sprite/split_0_1.png" id="5_ur0x2"]
[ext_resource type="Texture2D" uid="uid://feir5yg1rl1s" path="res://Sprite/S_kirakira3.png" id="6_crn8y"]
[ext_resource type="Texture2D" uid="uid://btiobrj3734vf" path="res://Sprite/split_0_2.png" id="6_xaqyh"]
[ext_resource type="Texture2D" uid="uid://cqa23nsiss4h3" path="res://Sprite/S_kirakira4.png" id="7_8qfpo"]
[ext_resource type="AudioStream" uid="uid://cl16wwpr3g8uu" path="res://Sound/shot1.mp3" id="11_ur0x2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3c51y"]
size = Vector2(12.758614, 15.604469)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2brrg"]
radius = 1.5762919
height = 28.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ur0x2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cyipv")
}, {
"duration": 1.0,
"texture": ExtResource("5_76vsb")
}, {
"duration": 1.0,
"texture": ExtResource("6_crn8y")
}, {
"duration": 1.0,
"texture": ExtResource("7_8qfpo")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cyipv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_cyipv")
}, {
"duration": 1.0,
"texture": ExtResource("5_76vsb")
}, {
"duration": 1.0,
"texture": ExtResource("6_crn8y")
}, {
"duration": 1.0,
"texture": ExtResource("7_8qfpo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3c51y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8qfpo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ur0x2")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8qfpo")
}, {
"duration": 1.0,
"texture": ExtResource("5_ur0x2")
}, {
"duration": 1.2,
"texture": ExtResource("6_xaqyh")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(4, 4)
collision_mask = 7
script = ExtResource("1_3c51y")
bullet_scene = ExtResource("2_2brrg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.7366443e-07)
rotation = -3.1415925
scale = Vector2(1.0972979, -1.6661893)
shape = SubResource("RectangleShape2D_3c51y")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(4.8800006, 1)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
scale = Vector2(1.0400003, 1)
shape = SubResource("CapsuleShape2D_2brrg")

[node name="ChageTimer" type="Timer" parent="."]

[node name="kirakira1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(10.999999, -14.999999)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_ur0x2")

[node name="kirakira2" type="AnimatedSprite2D" parent="."]
position = Vector2(-12.999999, 6.9999995)
scale = Vector2(0.05, 0.05)
sprite_frames = SubResource("SpriteFrames_cyipv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_3c51y")
animation = &"idle"

[node name="ShotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ur0x2")

[connection signal="body_entered" from="HitBox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ChageTimer" to="." method="_on_chage_timer_timeout"]
